build/log/idf_py_stderr_output_22792
/home/pi/httptc/main/nvs_store.c: In function 'save_target_temp':
/home/pi/httptc/main/nvs_store.c:10:18: error: 'nvs' undeclared (first use in this function)
   10 |     nvs_set_blob(nvs, "settings", (void*)&(struct { float temp; int delay; }){target_temp, output_delay_ms}, sizeof(float) + sizeof(int));
      |                  ^~~
/home/pi/httptc/main/nvs_store.c:10:18: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/httptc/main/nvs_store.c:10:79: error: 'target_temp' undeclared (first use in this function); did you mean 'save_target_temp'?
   10 |     nvs_set_blob(nvs, "settings", (void*)&(struct { float temp; int delay; }){target_temp, output_delay_ms}, sizeof(float) + sizeof(int));
      |                                                                               ^~~~~~~~~~~
      |                                                                               save_target_temp
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:108: esp-idf/main/CMakeFiles/__idf_main.dir/nvs_store.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
